--- a/views/optimization.ejs
+++ b/views/optimization.ejs
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to my blog</p>
-    <p>Click on any dot below to begin</p>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+<meta charset="utf-8">
+<body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script>
 
 var width = 960,
@@ -18,14 +10,6 @@ var width = 960,
 var nodes = d3.range(200).map(function() { return {radius: Math.random() * 12 + 4}; }),
     root = nodes[0],
     color = d3.scale.category10();
-
- var topics = [
-"Math", "Price", "Optimization"
-]
-for (var i=0; i<topics.length; i++) {
-  nodes[i].name = topics[i];
-  nodes[i].radius = 30;
-}
 
 
 root.radius = 0;
@@ -48,7 +32,7 @@ svg.selectAll("circle")
   .enter().append("circle")
     .attr("r", function(d) { return d.radius; })
     .style("fill", function(d, i) { return color(i % 3); })
-	
+    .text(function(d) { return d.name });
 
 force.on("tick", function(e) {
   var q = d3.geom.quadtree(nodes),
@@ -94,7 +78,3 @@ function collide(node) {
 }
 
 </script>
-  </body>
-</html>
-
-
