--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,26 @@
 <html>
   <head>
     <title><%= title %></title>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.css">
+    
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to my blog</p>
     <p>Click on any dot below to begin</p>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+        <p> Here's some math for you</p>
+    <span class="katex">c = \pm\ sqrt(a^2 + b^2)</span >
+
+
+<script type="text/javascript">
+$(".katex").each(function() {
+  katex.render(this.innerHTML, this, {displayMode: true });
+});
+</script>
 <script>
 
 var width = 960,
