--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,20 +2,41 @@
 <html>
   <head>
     <title><%= title %></title>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>
+    <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.css">
     
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to my blog</p>
-    <p>Click on any dot below to begin</p>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-        <p> Here's some math for you</p>
-    <span class="katex">c = \pm\ sqrt(a^2 + b^2)</span >
+<xmp theme="cerulean" style="display:none;">
 
+# <%= title %>
+<p>Welcome to my blog</p>
+<p>Click on any dot below to begin</p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+    <p> Here's some math for you</p>
+<span class="katex">c = \pm\ sqrt(a^2 + b^2)</span >
+
+
+# Markdown text goes in here
+<img src="/images/blog/lambertw/probvprice.png" style="width: 500px; margin: 0 auto; display: block;"/>
+## Chapter 1
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+et dolore magna aliqua. 
+
+## Chapter 2
+
+Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+culpa qui officia deserunt mollit anim id est laborum.
+</xmp>
+
+
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
 
 <script type="text/javascript">
 $(".katex").each(function() {
