--- a/views/discrete_choice.ejs
+++ b/views/discrete_choice.ejs
@@ -1,7 +1,7 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title><'Discrete Choice Model Optimization'></title>
+    <title><%= title %></title>
     <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>
