--- a/views/discrete_choice.ejs
+++ b/views/discrete_choice.ejs
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
     <script type="text/javascript">
- (".katex").each(function() {
+ $(".katex").each(function() {
   katex.render(this.innerHTML, this, {displayMode: true });
 });
 </script>
