--- a/views/discrete_choice.ejs
+++ b/views/discrete_choice.ejs
@@ -5,13 +5,6 @@
     <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-    <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
-    <script type="text/javascript">
- $(".katex").each(function() {
-  katex.render(this.innerHTML, this, {displayMode: true });
-});
-</script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.css">
 
@@ -42,6 +35,12 @@
 <img src="/images/blog/lambertw/probvprice.png" style="width: 500px; margin: 0 auto; display: block;"/>
 </xmp>
 
-	
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+
+<script type="text/javascript">
+ (".katex").each(function() {
+  katex.render(this.innerHTML, this, {displayMode: true });
+});
+</script>	
   </body>
 </html>
