--- a/views/discrete_choice.ejs
+++ b/views/discrete_choice.ejs
@@ -53,7 +53,7 @@
 
 ## Analytic Calculation
 
-<p>While this problem can be solved numerically, often an analytic solution to such a problem helps to reduce computation time, and simplifies the entire process. It can also help to make coding the solution to this problem more straightforward, and easier to read. I seek to maximize profit, with respect to the price, p. This is a standard calculus problem, that is, take the first derivative of profit with respect to p, and set the equation to zero. From there, we must rearrange to find explicitly some optimal price p* in terms of &alpha; and &beta;. First, as the natural logarithm function is monotonic, I can maximize the log of our revenue function, and still preserve the true value of p*. This is merely done for ease of differentiation, not for any technical reason. We have: </p>
+<p>While this problem can be solved numerically, often an analytic solution to such a problem helps to reduce computation time, and simplifies the entire process. It can also help to make coding the solution to this problem more straightforward, and easier to read. I seek to maximize profit, with respect to the price, p. This is a standard calculus problem, that is, take the first derivative of profit with respect to p, and set the equation to zero. From there, we must rearrange to find explicitly some optimal price p&#42; in terms of &alpha; and &beta;. First, as the natural logarithm function is monotonic, I can maximize the log of our revenue function, and still preserve the true value of p&#42;. This is merely done for ease of differentiation, not for any technical reason. We have: </p>
 
 <span class="katex"> ln(R)=ln(p) + \alpha + \beta p - ln(1+e^{\alpha+\beta p}) </span>
 
