--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,18 +21,11 @@
 
 
 # Markdown text goes in here
-<img src="/images/blog/lambertw/probvprice.png" style="width: 500px; margin: 0 auto; display: block;"/>
-## Chapter 1
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-et dolore magna aliqua. 
+## Click on any of the below to find a post:
+<p> <a href="http://liamcwalsh.herokuapp.com/discrete_choice"> Discrete Choice Price Optimization </a></p>
+<p> <a href ="http://liamcwalsh.herokuapp.com/opt_approx"> Approximating the Lambert W Function and Optimal Price </a></p>
 
-## Chapter 2
-
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.
 </xmp>
 
 
