Updated front page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 <p>Click on any dot below to begin</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <p> Here's some math for you</p>
-<span class="katex">c = \pm\ sqrt(a^2 + b^2)</span>
+<p> <span class="katex">c = \pm\ sqrt(a^2 + b^2)</span> </p>
 
 # Markdown text goes in here
 
