Use relative urls for hyperlinks

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,9 @@
 
 ## Click on any of the below to find a post:
 
-<p> <a href="http://liamcwalsh.herokuapp.com/discrete_choice"> Discrete Choice Price Optimization </a> </p>
+<p> <a href="/discrete_choice"> Discrete Choice Price Optimization </a> </p>
 
-<p> <a href ="http://liamcwalsh.herokuapp.com/opt_approx"> Approximating the Lambert W Function and Optimal Price </a></p>
+<p> <a href ="/opt_approx"> Approximating the Lambert W Function and Optimal Price </a></p>
 
 </xmp>
 
