--- a/views/optimization.ejs
+++ b/views/optimization.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="https://cdn.rawgit.com/csaladenes/ddc0b326b93ec641c84f/raw/nv.d3.css" rel="stylesheet"/>
+<link href="bower_components/nvd3/build/nv.d3.min.css" rel="stylesheet"/>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="https://cdn.rawgit.com/csaladenes/ddc0b326b93ec641c84f/raw/nv.d3.min.js"></script>
+<script src="bower_components/nvd3/build/nv.d3.min.js"></script>
   <meta charset="utf-8">
   <title>JS Bin</title>
 <style>
