Update strapdown to bower

--- a/views/discrete_choice.ejs
+++ b/views/discrete_choice.ejs
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>
+    <link rel='stylesheet' href='/stylesheets/cerulean.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.css">
 
@@ -132,7 +133,8 @@
 
 </xmp>
 
-<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="bower_components/strapdown/strapdown.js"></script>
+<link rel="stylesheet" href="bower_components/strapdown/strapdown.css">
 
 <script type="text/javascript">
  $(".katex").each(function() {
