--- a/views/opt_approx.ejs
+++ b/views/opt_approx.ejs
@@ -4,8 +4,10 @@
     <title><%= title %></title>
     <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>
+    <script src="bower_components/katex/dist/katex.min.js"></script>
+    <link rel='stylesheet' href='bower_components/katex/dist/katex.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/cerulean.min.css' />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.css">
 
    </head>
@@ -102,7 +104,8 @@
 <p> In this case, I compared the runtime of the 1st order approximation, which clocked in at an average time of 3.6267*10^-7 s. The numerical runtime, however, was significantly slower, taking, on average, .0301s. </p>
 </xmp>
 
-<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="bower_components/strapdown/strapdown.js"></script>
+<link rel="stylesheet" href="bower_components/strapdown/strapdown.css">
 
 <script type="text/javascript">
  $(".katex").each(function() {
