Edited page formatting

--- a/views/discrete_choice.ejs
+++ b/views/discrete_choice.ejs
@@ -6,14 +6,15 @@
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/cerulean.min.css' />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.css">
+    <link rel="stylesheet" href="bower_components/strapdown/strapdown.css">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 
    </head>
    <body>
 <xmp theme="cerulean" style="display:none;">
 
-
+<div class="blog content">
 ## Background
 
 <p> A common problem in business is the question of what price to charge, or, similarly, how much of a discount to offer on a good. A firm has to balance two, often conflicting restraints. They have to charge a price high enough so that they can maximize their own profit, but they also have to ensure the price is at a level which makes consumers want to buy the good. The question, then, becomes this: How can one optimize the profit, under these restraints? </p>
@@ -133,8 +134,8 @@
 
 <!-- xmp goes here-->
 </xmp>
+</div>
 <script src="bower_components/strapdown/strapdown.js"></script>
-<link rel="stylesheet" href="bower_components/strapdown/strapdown.css">
 
 <script type="text/javascript">
  $(".katex").each(function() {
