--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: HelveticaNeue, Helvetica, Arial, sans-serif !important;
+  font-size: 16px;
 }
 a {
   color: #00b7ff;
@@ -9,4 +10,10 @@ h1 {
   color: #00f;
   font-size: 48px;
   font-weight: 100;
+}
+.blog.content {
+  width: 500px;
+  display: block;
+  margin: 0 auto;
+  font-size: 16px;
 }
