--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,10 +1,19 @@
 body
   padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font-family: HelveticaNeue, Helvetica, Arial, sans-serif !important
+  font-size: 16px 
+
 a
   color: #00B7FF
+
 
 h1 
   color: blue
   font-size: 48px
   font-weight: 100
+
+.blog.content
+  width:500px;
+  display: block;
+  margin: 0 auto;
+  font-size: 16px 
