--- a/views/discrete_choice.ejs
+++ b/views/discrete_choice.ejs
@@ -21,13 +21,13 @@
 
 ## The Discrete Choice Model
  
- <p> Typically, the higher the price of a good, the less likely a consumer is to purchase that good. Further, the probability of purchase is dependent upon the product itself, the price of the product, and the consumer. In some cases, a firm is able to segment a market into smaller sections, or even down to the individual level. In this model, I assume that the firm in question is able to cater the price to a specific. As such, this allows me to assume that the consumer, and thus the preferences associated with that consumer, remain constant. Next, since we are only discussing a single good, the attributes of the good in the model remain constant as well. Thus, the only thing which will be varied is the price. A common model to employ in this context is the Discrete Choice Model. This model is characterized by how the probability of purchase of a good is defined. In this case, the probability is calculated as a logistic regression model. </p>
+ <p> Typically, the higher the price of a good, the less likely a consumer is to purchase that good. Further, the probability of purchase is dependent upon the product itself, the price of the product, and the specific consumer. In this model, I assume that the firm in question is able to cater the price of the good towards one consumer. As such, this allows me to assume that the consumer, and thus the preferences associated with that consumer, remain constant. Next, since we are only discussing a single good, the attributes of the good in the model remain constant as well. Thus, the only thing which will be varied is the price. A common model to employ in this context is the Discrete Choice Model. </p>
 
- ## The Logisitic Regression Model
- <p>The logistic regression model takes its name from the fact that it utilizes the logistic function to calculate probability. The logistic function looks like the following: </p>
+ ## The Logistic Model
+ <p>The logistic  model takes its name from the fact that it utilizes the logistic function to calculate probability. The logistic function looks like the following: </p>
 <span class="katex"> P = \frac{e^U}{1+e^U} </span>
 
-<p> This is a particularly useful model, as it limits P within [0,1] </p>
+<p> This is a particularly useful model, as it bounds P within [0,1] </p>
 
 <p> Next, the logistic regression model defines U in a more explicit manner. In this case, one can consider U to be the utility of a particular product. For this model, I assumed U to be a linear function of p, the price: </p>
 
@@ -41,21 +41,10 @@
 
 <img src="/images/blog/discrete_choice/probvprice.png" style="width: 500px; margin: 0 auto; display: block;"/>
 
-## Revenue and Profit
-
-<p>For an individual person, the expected revenue is simply the price of the good times the probability of purchase: </p>
-
-<span class="katex"> R=Pp=p\frac{e^U}{1+e^U} </span>
-
-<p> We can extend this model to account for profit, which is defined in the following way, where the variable c represents cost: </p>
-
-<span class="katex"> \pi=Pp - Pc_{marginal} - c_{fixed} </span>
-
-<p> However, the math to optimize this profit function is nearly identical to that of optimizing the revenue function, so for simplicity, I will only use the revenue function. </p>
 
 ## Analytic Calculation
 
-<p>While this problem can be solved numerically, often an analytic solution to such a problem helps to reduce computation time, and simplifies the entire process. It can also help to make coding the solution to this problem more straightforward, and easier to read. I seek to maximize profit, with respect to the price, p. This is a standard calculus problem, that is, take the first derivative of profit with respect to p, and set the equation to zero. From there, we must rearrange to find explicitly some optimal price p&#42; in terms of &alpha; and &beta;. First, as the natural logarithm function is monotonic, I can maximize the log of our revenue function, and still preserve the true value of p&#42;. This is merely done for ease of differentiation, not for any technical reason. We have: </p>
+<p>While this problem can be solved numerically, often an analytic solution to such a problem helps to reduce computation time, and simplifies the entire process. It can also help to make coding the solution to this problem more straightforward, and easier to read. I seek to maximize profit, with respect to the price, p. First, as the natural logarithm function is monotonic, I can maximize the log of our revenue function, and still preserve the true value of p&#42;. This is merely done for ease of differentiation. We have: </p>
 
 <span class="katex"> ln(R)=ln(p) + \alpha + \beta p - ln(1+e^{\alpha+\beta p}) </span>
 
@@ -75,7 +64,7 @@
 
 <span class="katex"> x=W(x)e^{W(x)} </span>
 
-<p> nfortunetly, there does not exist a simple equation relaying the value of W(x). Instead, it must be represented in a series expansion, like the following, found from <a href="http://mathworld.wolfram.com/LambertW-Function.html">WolframMathWorld</a>: </p>
+<p> Unfortunetly, there does not exist a simple equation relaying the value of W(x). Instead, it must be represented in a series expansion, like the following, found from <a href="http://mathworld.wolfram.com/LambertW-Function.html">WolframMathWorld</a>: </p>
 
 <span class="katex"> (x)=\sum_{n=1}^{\infty} {\frac{(-1)^{n-1} (n^{n-2})}{(n-1)!} x^n}, \quad |x| \leq \frac{1}{e}</span>
 
@@ -83,13 +72,13 @@
 
 <p> To use the Lambert W function, I had to do some rearrangement, and came up with the following equality: </p>
 
-<span class="katex"> e^{\alpha -1}=-(\beta p +1)e^{-\beta p -1} </span>
+<span class="katex"> e^{\alpha -1}=-(\beta p +1)e^{-(\beta p +1)} </span>
 
 <p> Then, after some simple rearrangement, I arrived at an explicit equation for the optimal price, p*: </p>
 
 <span class="katex"> p^*=-\frac{W(e^{\alpha -1}) +1}{\beta} </span>
 
-## Numerical Calculation: Varying &alpha;
+## Numerical Calculation
 
 <p> In this case, no longer do I seek to find p* through an explicit formula, but instead I have a computer sort through all the values to find a maximum. Typically, the best method of search for a maximum is done through a binary search algorithm. I created 2 graphs in MATLAB. In this first one, I let β=-.1, and varied α between 0 and 10 in .5 step increments. </p>
 
@@ -100,7 +89,6 @@
 <p> A second finding is that the maxima occur in a linear fashion, which is curious. </p>
 
 
-## Numerical Calculation: Varying &beta;
 
 <p> I also created a graph which shifts β values, from -.05 to -.49, while holding &alpha;=4: </p>
 
@@ -126,7 +114,7 @@
 
 ## Concluding Remarks
 
-<p> Overall, I discovered that while there does exist an explicit equation determining the price which optimizes revenue, it is unfit for practical use as its runtime is too high. However, I also noticed a trend in the maxima when varying &beta; and &alpha;: The maxima occurred in a linear fashion. This seems to indicate that there may be a way to approximate the equation for the optimal price. If so, this raises a few questions: </p>
+<p> Overall, I discovered that there does exist an explicit equation determining the price which optimizes revenue. I also noticed a trend in the maxima when varying &beta; and &alpha;: The maxima occurred in a linear fashion. This seems to indicate that there may be a way to approximate the equation for the optimal price. If so, this raises a few questions: </p>
 
 <p> What is the explicit form of the approximation? </p>
 <p> Is it accurate enough for practical use? </p>
