--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,15 +13,10 @@
   <body>
 <xmp theme="cerulean" style="display:none;">
 
-# <%= title %>
-<p>Welcome to my blog</p>
-<p>Click on any dot below to begin</p>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-    <p> Here's some math for you</p>
-<p> <span class="katex">c = \pm\ sqrt(a^2 + b^2)</span> </p>
+# Welcome!
 
 
-## Click on any of the below to find a post:
+## Post Navigation
 
 <p> <a href="/discrete_choice"> Discrete Choice Price Optimization </a> </p>
 
