--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,9 @@
 <xmp theme="cerulean" style="display:none;">
 
 # Welcome!
+<p> This is my blog. Here I post about various math topics I happen to run across, as well as other topics that I deem fit. </p>
 
-
-## Post Navigation
+<h3> Post Navigation </h3>
 
 <p> <a href="/discrete_choice"> Discrete Choice Price Optimization </a> </p>
 
