--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 <xmp theme="cerulean" style="display:none;">
 
 # Welcome!
-<p> This is my blog. Here I post about various math topics I happen to run across, as well as other topics that I deem fit. </p>
+<p> This is my blog. Here I post about various math topics I happen to run across. </p>
 
 <h3> Post Navigation </h3>
 
@@ -22,7 +22,9 @@
 
 <p> <a href ="/opt_approx"> Approximating the Lambert W Function and Optimal Price </a></p>
 
+
 </xmp>
+
 
 
 <script src="bower_components/strapdown/strapdown.js"></script>
