--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,3 +17,13 @@ h1 {
   margin: 0 auto;
   font-size: 16px;
 }
+.images {
+  width: 700px;
+  height: 400px;
+  position: relative;
+  right: 110px;
+}
+.navigation {
+  position: relative;
+  left: 450px;
+}
